--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity android:name=".HomeCompany" />
         <activity android:name=".HomeActivity" />
+        <activity android:name=".CompanyWebSite" />
     </application>
 
 </manifest>
